// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Value Edit Dialog Tests Footer, Heading, Description and Payload 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="testDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Select Value
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell dialogDescriptionCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar"
            style="flex-direction: column;"
          >
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar dialogDescription"
              style="flex-direction: column;"
            >
              <label
                __self="[object Object]"
                __source="[object Object]"
                class="msg label"
                data-lang="text"
                data-tooltip="expand"
                id="caption0"
                language="text"
              >
                Lorem Ipsum Dolor Sit Amet
              </label>
              <label
                __self="[object Object]"
                __source="[object Object]"
                class="msg label"
                data-lang="text"
                data-tooltip="expand"
                id="caption1"
                language="text"
              >
                Show this dialog to show a dialog
              </label>
            </div>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            input
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
        >
          Custom Footer
        </label>
      </div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Value Edit Dialog Tests Grouped Sections 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="testDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Select Value
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar tabview top"
            style="flex-direction: column;"
          >
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar selector horizontal tabArea stretched"
              style="flex-direction: row;"
            >
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem stepDown"
                id="selectorItemstepDown"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem normal"
                id="page0"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  My First Section
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem selected normal"
                id="page1"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  My Second Section
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem normal"
                id="page2"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  My Third Section
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem stepUp"
                id="selectorItemstepUp"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
            </div>
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar content"
              style="flex-direction: column;"
            >
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg grid"
                style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
              >
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    output
                  </label>
                  <div
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      __self="[object Object]"
                      __source="[object Object]"
                      class="msg input valueEditor"
                      id="input"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            something else
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
        >
          Custom Footer
        </label>
      </div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Value Edit Dialog Tests Grouped Sections 2`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="testDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Select Value
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar tabview top"
            style="flex-direction: column;"
          >
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar selector horizontal tabArea stretched"
              style="flex-direction: row;"
            >
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem stepDown"
                id="selectorItemstepDown"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem normal"
                id="page0"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  My First Section
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem selected normal"
                id="page1"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  My Second Section
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem normal"
                id="page2"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  My Third Section
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem stepUp"
                id="selectorItemstepUp"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
            </div>
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar content"
              style="flex-direction: column;"
            >
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg grid"
                style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
              >
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    output
                  </label>
                  <div
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      __self="[object Object]"
                      __source="[object Object]"
                      class="msg input valueEditor"
                      id="input"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            something else
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
        >
          Custom Footer
        </label>
      </div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Value Edit Dialog Tests Grouped Values 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="testDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Select Value
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="output"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 5;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Print Help
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label description"
            data-tooltip="expand"
          />
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Helpers
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="note"
              spellcheck="true"
              type="text"
            />
          </div>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="debug"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Value Edit Dialog Tests Render with Defaults Test 1`] = `
<ValueEditDialog>
  <Dialog
    actions={
      Object {
        "begin": Array [],
        "end": Array [
          <Button
            caption="OK"
            disabled={false}
            id="ok"
            onClick={[Function]}
          />,
          <Button
            caption="Cancel"
            id="cancel"
            onClick={[Function]}
          />,
        ],
      }
    }
    caption={
      <y>
        <Icon
          disabled={false}
          src={388}
        />
        <Label />
      </y>
    }
    className="msg valueEditDialog"
    container={Object {}}
    content={
      <Grid
        columnGap={16}
        columns={8}
        rowGap={16}
      />
    }
    id=""
    onClose={[Function]}
  >
    <Portal
      container={Object {}}
      id=""
      onClose={[Function]}
      onOpen={[Function]}
    />
  </Dialog>
  <Menu
    onItemClick={[Function]}
    orientation="column"
    placement="right-start"
  >
    <Popup
      className="msg menu"
      onClose={[Function]}
      onKeyDown={[Function]}
      onOpen={[Function]}
      orientation="column"
      pinned={false}
      placement="right-start"
      showArrow={false}
    >
      <Portal
        onClose={[Function]}
        onKeyDown={[Function]}
        onOpen={[Function]}
      />
    </Popup>
  </Menu>
</ValueEditDialog>
`;

exports[`Value Edit Dialog Tests Simple Dialog 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="testDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Enter a name for the new theme
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            input
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Value Edit Dialog Tests Update Contexts 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="testDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Select Value
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            input
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Value Edit Dialog Tests Update Contexts 2`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="testDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Select Value
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            input
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label sectionTitle"
            data-tooltip="expand"
          >
            Full Section
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            A caption for the section
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label description"
            data-tooltip="expand"
          >
            A caption for the section
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Activate this
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg checkbox unchecked valueEditor"
            id="yesNo"
            tabindex="0"
          >
            <span
              __self="[object Object]"
              __source="[object Object]"
              class="checkMark"
            />
            Activate this
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Pick File
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar fileSelector valueEditor"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input"
              id="file"
              spellcheck="true"
              type="text"
            />
            <button
              __self="[object Object]"
              __source="[object Object]"
              caption="..."
              class="msg button"
              id="fileBtn"
              tabindex="0"
            >
              ...
            </button>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Select One
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar dropdown valueEditor"
            id="selectOne"
            selection="One"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              __self="[object Object]"
              __source="[object Object]"
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              One
            </label>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Do it!
          </label>
          <button
            __self="[object Object]"
            __source="[object Object]"
            caption="Do it!"
            class="msg button valueEditor"
            id="clickMe"
            tabindex="0"
          >
            Do it!
          </button>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg treeGrid dynamicList"
            id="listMe"
          />
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar matrixContainer"
            style="flex-direction: row;"
          >
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg treeGrid verticalGrid"
              id="valueGrid"
            />
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar"
              id="matrixActions"
              style="flex-direction: row;"
            >
              <button
                __self="[object Object]"
                __source="[object Object]"
                class="msg button"
                data-tooltip="Add new property entry"
                id="buttonAddEntry"
                tabindex="0"
              >
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg icon"
                  data-tooltip="inherit"
                  style="mask-image: url(add.svg);"
                />
              </button>
              <button
                __self="[object Object]"
                __source="[object Object]"
                class="msg button"
                data-tooltip="Remove selected entries"
                id="buttonRemoveEntry"
                tabindex="0"
              >
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg icon"
                  data-tooltip="inherit"
                  style="mask-image: url(remove.svg);"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg grid upDown valueEditor"
            id="upDown"
            step="1"
            style="grid-template-columns: auto 16px;"
            value="12345"
          >
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar gridCell"
              id="content"
              style="flex-direction: row; grid-row: span 2;"
            >
              <input
                __self="[object Object]"
                __source="[object Object]"
                class="msg input"
                spellcheck="true"
                style="text-align: end;"
                type="text"
              />
            </div>
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar gridCell"
              style="flex-direction: row;"
            >
              <button
                __self="[object Object]"
                __source="[object Object]"
                class="msg button"
                id="up"
                tabindex="-1"
              />
            </div>
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar gridCell"
              style="flex-direction: row;"
            >
              <button
                __self="[object Object]"
                __source="[object Object]"
                class="msg button"
                id="down"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Give Me Text
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Wait For Me
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="loadingInput"
              spellcheck="true"
              type="text"
            />
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar progressIndicatorHost"
              style="flex-direction: column; justify-content: center; align-items: center; opacity: 0.95;"
            >
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="linearBackground"
              >
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="linear animated"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-row: span 6; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Routine Parameters:
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg treeGrid verticalGrid relationalList"
          />
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Name
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="testRelation.title"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Parameter 1
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="testRelation.param1"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        />
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        />
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        />
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        />
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Value Edit Dialog Tests Updating Dialog Values 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="testDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Select Value
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            input
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label sectionTitle"
            data-tooltip="expand"
          >
            Full Section
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            A caption for the section
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label description"
            data-tooltip="expand"
          >
            A caption for the section
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Activate this
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg checkbox unchecked valueEditor"
            id="yesNo"
            tabindex="0"
          >
            <span
              __self="[object Object]"
              __source="[object Object]"
              class="checkMark"
            />
            Activate this
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Pick File
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar fileSelector valueEditor"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input"
              id="file"
              spellcheck="true"
              type="text"
            />
            <button
              __self="[object Object]"
              __source="[object Object]"
              caption="..."
              class="msg button"
              id="fileBtn"
              tabindex="0"
            >
              ...
            </button>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Select One
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar dropdown valueEditor"
            id="selectOne"
            selection="One"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              __self="[object Object]"
              __source="[object Object]"
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              One
            </label>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Do it!
          </label>
          <button
            __self="[object Object]"
            __source="[object Object]"
            caption="Do it!"
            class="msg button valueEditor"
            id="clickMe"
            tabindex="0"
          >
            Do it!
          </button>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg treeGrid dynamicList"
            id="listMe"
          />
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar matrixContainer"
            style="flex-direction: row;"
          >
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg treeGrid verticalGrid"
              id="valueGrid"
            />
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar"
              id="matrixActions"
              style="flex-direction: row;"
            >
              <button
                __self="[object Object]"
                __source="[object Object]"
                class="msg button"
                data-tooltip="Add new property entry"
                id="buttonAddEntry"
                tabindex="0"
              >
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg icon"
                  data-tooltip="inherit"
                  style="mask-image: url(add.svg);"
                />
              </button>
              <button
                __self="[object Object]"
                __source="[object Object]"
                class="msg button"
                data-tooltip="Remove selected entries"
                id="buttonRemoveEntry"
                tabindex="0"
              >
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg icon"
                  data-tooltip="inherit"
                  style="mask-image: url(remove.svg);"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg grid upDown valueEditor"
            id="upDown"
            step="1"
            style="grid-template-columns: auto 16px;"
            value="12345"
          >
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar gridCell"
              id="content"
              style="flex-direction: row; grid-row: span 2;"
            >
              <input
                __self="[object Object]"
                __source="[object Object]"
                class="msg input"
                spellcheck="true"
                style="text-align: end;"
                type="text"
              />
            </div>
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar gridCell"
              style="flex-direction: row;"
            >
              <button
                __self="[object Object]"
                __source="[object Object]"
                class="msg button"
                id="up"
                tabindex="-1"
              />
            </div>
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar gridCell"
              style="flex-direction: row;"
            >
              <button
                __self="[object Object]"
                __source="[object Object]"
                class="msg button"
                id="down"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Give Me Text
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Wait For Me
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="loadingInput"
              spellcheck="true"
              type="text"
            />
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar progressIndicatorHost"
              style="flex-direction: column; justify-content: center; align-items: center; opacity: 0.95;"
            >
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="linearBackground"
              >
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="linear animated"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-row: span 6; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Routine Parameters:
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg treeGrid verticalGrid relationalList"
          />
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Name
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="testRelation.title"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Parameter 1
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="testRelation.param1"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        />
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        />
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        />
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        />
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
